// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render flow page 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <FlowPage
    definition={
      Object {
        "defaultPage": "Test Page",
        "pages": Array [
          Object {
            "name": "Test Page",
            "subPages": Array [
              Object {
                "blocks": Array [
                  Object {
                    "type": "test",
                    "version": "0.0.0",
                  },
                  Object {
                    "type": "test",
                    "version": "0.0.0",
                  },
                ],
                "name": "Sub A",
              },
              Object {
                "blocks": Array [
                  Object {
                    "type": "test",
                    "version": "0.0.0",
                  },
                  Object {
                    "type": "test",
                    "version": "0.0.0",
                  },
                ],
                "name": "Sub B",
              },
            ],
            "type": "flow",
          },
        ],
      }
    }
    ee={EventEmitter {}}
    page={
      Object {
        "name": "Test Page",
        "subPages": Array [
          Object {
            "blocks": Array [
              Object {
                "type": "test",
                "version": "0.0.0",
              },
              Object {
                "type": "test",
                "version": "0.0.0",
              },
            ],
            "name": "Sub A",
          },
          Object {
            "blocks": Array [
              Object {
                "type": "test",
                "version": "0.0.0",
              },
              Object {
                "type": "test",
                "version": "0.0.0",
              },
            ],
            "name": "Sub B",
          },
        ],
        "type": "flow",
      }
    }
    prefix="pages.0"
    showDialog={[Function]}
  />
  <PageDialog
    ee={EventEmitter {}}
    showDialog={[Function]}
  />
</Fragment>
`;

exports[`should render tabs pages 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <TabsPage
    ee={EventEmitter {}}
    prefix="pages.0"
    showDialog={[Function]}
    subPages={
      Array [
        Object {
          "blocks": Array [
            Object {
              "type": "test",
              "version": "0.0.0",
            },
            Object {
              "type": "test",
              "version": "0.0.0",
            },
          ],
          "name": "Sub A",
        },
        Object {
          "blocks": Array [
            Object {
              "type": "test",
              "version": "0.0.0",
            },
            Object {
              "type": "test",
              "version": "0.0.0",
            },
          ],
          "name": "Sub B",
        },
      ]
    }
  />
  <PageDialog
    ee={EventEmitter {}}
    showDialog={[Function]}
  />
</Fragment>
`;

exports[`should render the blocks for a page 1`] = `
<Fragment>
  <TitleBar>
    Test Page
  </TitleBar>
  <BlockList
    blocks={
      Array [
        Object {
          "type": "test",
          "version": "0.0.0",
        },
        Object {
          "type": "test",
          "version": "0.0.0",
        },
      ]
    }
    ee={EventEmitter {}}
    prefix="pages.0.blocks"
    showDialog={[Function]}
  />
  <PageDialog
    ee={EventEmitter {}}
    showDialog={[Function]}
  />
</Fragment>
`;
